docs/css/_documentation.sass
code
  word-wrap: break-word

// Layout

// Navigation
.widget-nav
  padding: 0
  padding-left: 15px
  font-weight: lighter
  background-color: $gray-light
  position: fixed
  +position(60px,null,0,0)

.documentation-menu
  height: 100%
  overflow-y: auto
  padding: 0
  font-size: 1.2em
  font-weight: bold
  > ul
    line-height: 2em
    list-style: none
    margin: 0
    padding: 15px 0
    ul ul li:before
      content: ""
      width: 8px
      height: 8px
      background-color: $brand-primary
      border-radius: 1px
      margin-right: 4px
      display: inline-block
    a
      color: #242424
      &:hover
        color: $brand-primary
        text-decoration: none
    ul
      font-size: 0.85em
      padding: 0 0 5px 10px
      line-height: 1.7em
      list-style: none

// Left panel
.widget-description
  padding-right: 0

.main-documentation
  height: 100%
  padding-top: 50px
  .description
    min-height: 84px

.shameless-marketing
  float: right
  width: 43%
  color: rgba(white, 0.75)
  font-size: .9em
  img
    position: relative
  .sticker
    +size(60px,60px)
    margin: 0 auto
    border-radius: 50%
    opacity: 0
    animation: arrow 1s ease-in-out
    animation-fill-mode: forwards
    border: solid 2px rgba(white, 0.5)
    margin-bottom: 10px
    p
      padding: 0
      height: 100%
      padding: 0
      margin: 0
    img
      position: absolute
      top: 50%
      left: 50%
      transform: translate(-50%, -50%)
  .sticker-algolia
    animation-delay: 0.5s
    margin-top: -2px
  .sticker-open-source
    animation-delay: 1s
  .sticker-ux
    animation-delay: 1.5s

.documentation-content
  padding: 30px
  font-size: 14px
  color: rgba(0, 0, 0, 0.75)
  p
    line-height: 1.8em
  h1[id], h2[id], h3[id]
    clear: both
  h1[id], h2[id], h3[id], h4[id], h5[id]
    &:before
      content: ""
      display: block
      height: $anchor-offset
      margin: -$anchor-offset 0 0
    a.anchor
      display: inline-block
      font-size: 0.7em
      visibility: hidden
      padding-right: 0.2em
      margin-top: -0.5em
      color: inherit
      &:hover, &:active, &:focus
        color: inherit
        text-decoration: none
    &:hover
      a.anchor
        visibility: visible
  > p, > div[id], > h1, > h2, > h3, > h4, > h5, > pre, > .highlight, > ul, > .row
    margin-right: 50%
    max-width: 50%
  ul
    padding: 0 10px 0 30px
  li
    padding-bottom: 6px
  > .highlight, > .row .highlight
    pre
      border: 0
      .o
        color: inherit
  h2, .h2
    margin-top: 3em
    font-size: 2em
    font-weight: normal
    text-transform: uppercase
    clear: both
    &:first-child
      margin-top: 0
  h3, .h3
    margin: 2em 0 0.8em
    font-size: 1.7em
    font-weight: bold
    clear: both
  h4, .h4
    border-bottom: dashed 1px #cccccc
    padding: 0 0 8px
    margin: 2em 0 1em 0
    font-size: 1.3em
    font-weight: bold
    clear: both
  > p, > ul
    code
      background-color: #f3f3f3
      border: 1px solid darken(#f3f3f3, 7%)
      color: $text-color
      font-weight: bold
  .version
    font-size: .9em
    margin-top: 2em
    strong
      color: white

.widget-icon
  margin: 4px 20px 20px 0

.html-container
  border: none
  color: #a3b6cb
  padding: 9.5px
  margin: 0 0 10px
  background-color: #0a1724
  word-wrap: normal
  white-space: pre
  overflow-x: scroll

.widget-container
  padding: 50px 40px 40px
  border: solid 1px #e4e4e4
  border-radius: 5px
  position: relative
  overflow-x: hidden
  clear: left
  &:after
    font-size: 11px
    content: "Widget display"
    top: 0
    left: 0
    color: #999999
    padding: 4px 6px
    line-height: 1em
    position: absolute
    background-color: $gray-light
    border: solid 1px #e4e4e4
    border-width: 0 1px 1px 0
    border-radius: 5px 0 3px 0

.codebox-combo
  clear: both
  & > p
    float: left
    max-width: 50%
  .code-box
    float: right

// Code box

.code-samples
  background-color: #172c4f
  background: linear-gradient(to bottom, #0a1724 0%, #172c4f 100%)
  position: absolute
  width: 46%
  +position(0,0,0,null)

.code-box
  position: relative
  width: 44%
  float: right
  clear: right
  .btn-group
    position: absolute
    right: 0
    top: -3em
    .toggle-doc-button
      text-align: right
      color: $brand-primary
      background-color: #0a1724
      border: none
      transition: color  .2s, background-color .2s
      &:hover
        color: white
      &:active, &:focus
        outline: 0px
      &.active
        background: #163350
  .copy-btn
    display: block
    position: absolute
    right: 5px
    top: 5px
    opacity: 0
    font-size: .9em
    background-color: rgba($brand-primary, 0.1)
    border: none
    text-transform: uppercase
    color: rgba(white, 0.4)
    transition: opacity .2s
    &:active, &:focus
      outline: 0px
    &:active
      color: #0a1724
      background-color: $brand-primary
      border-color: #0a1724
  &:hover
    .copy-btn
      display: block
      opacity: 1
  .jsdoc
    border: none
    color: #a3b6cb
    padding: 9.5px
    margin: 0 0 10px
    background-color: #0a1724
    code
      background-color: #0a1724
    .attr-optional code
      color: #46aeda
    .attr-required code
      color: $success-color
    .attr-infos
      display: block
      font-size: .8em
      margin-left: 10px
    h5
      text-decoration: underline
      color: #dddddd
    pre
      background: transparent
      border: none
      padding: 0
      margin-bottom: 1.5em
    table
      table-layout: fixed
      margin-top: 1em
      width: 100%
      th
        font-size: 11px
        font-weight: bold
        text-transform: uppercase
        border-bottom: solid 1px #758393
      td
        padding: 0.5em
        border-bottom: solid 1px #162b50
        code
          color: white
    .attr-legend
      padding: 10px
      margin: 0
      text-align: right
      span
        font-size: 10px
        color: #58d158

  .requirements
    display: none
    border: none
    color: #a3b6cb
    padding: 9.5px
    margin: 0 0 10px
    background-color: #0a1724
    code
      font-size: 1em
      background: none
      color: #58d158
    

// Widgets
#q input
  width: 100%
  padding: 2px 3px

// debug
.debug-widget
  position: relative
  &.widget-container:after
    z-index: 11
    border: none
  > [class^=ais-]
    outline: 1px solid #660000
    &:before
      content: "." attr(class)
      text-align: right
      white-space: nowrap
      font-size: 11px
      z-index: 10
      position: absolute
      top: 0
      right: 0
      left: 0
      padding: 4px 6px
      line-height: 1em
      background-color: $gray-light
      color: #660000
  [class^=ais-]
    cursor: pointer
    padding: 4px
    &:hover
      outline: 1px solid #660000
      &:before
        content: "." attr(class)
        text-align: right
        white-space: nowrap
        font-size: 11px
        font-size: 12px
        font-weight: bold
        z-index: 10
        position: absolute
        top: 0
        right: 0
        left: 0
        padding: 4px 6px
        line-height: 1em
        background-color: $gray-light
        color: #660000
    [class^=ais-]
      &:hover
        outline: 1px solid #990000
        &:before
          color: #990000
      [class^=ais-]
        &:hover
          outline: 1px solid #cc3300
          &:before
            color: #cc3300
        [class^=ais-]
          &:hover
            outline: 1px solid #ff6600
            &:before
              color: #ff6600
    label:hover
      // hovering a label containing a input forwards the `:hover` state to the input
      // let's hide it except when you focus/activate it
      input[class^=ais-]:hover
        &:before
          display: none
      input[class^=ais-]:focus, input[class^=ais-]:active
        &:before
          display: block


@media (max-width: $screen-sm-max)
  .main-documentation
    padding: 60px 0 0 0
    .row
      margin: 0
    img
      max-width: 100%
  .documentation-content
    padding: 60px 0 0 0
    font-size: .95em
  .toc-menu
    position: fixed
    top: 60
    left: 0
    width: 100%
    background: $gray-light
    padding: 8px 10px
    z-index: 2
  .widget-description
    p, h1, h2, h3, h4
      padding: 0 0 0 20px

@media (max-width: $screen-xs-max)
  .widget-container
    clear: both
  .code-box
    width: 100%
    background: #172c4f
    margin-bottom: 1em
    .btn-group
      position: static
    .copy-btn
      display: none
      visibility: hidden
    .btn-group
      .toggle-doc-button
        background: #163350
        &.active
          background: #0a1724
    .jsdoc
      margin: 0
  .widget-description
    -webkit-overflow-scrolling: touch
    padding: 0
    p, h1, h2, h3, h4, div[id], ul, .highlight
      margin-right: 0
      width: 100%
      max-width: 100%
    p, h1, h2, h3, h4
      padding: 9.5px
  .highlight pre
    margin: 0
    border-radius: 0

